--- a/src/styles/common/_colors.sass
+++ b/src/styles/common/_colors.sass
@@ -26,7 +26,8 @@ $white: #fff
 $black: #050505
 $lblack: #191919
 $main: #333333
-$yellow: #fec53a
+$silver: darken($white,60%)
+$green: #007336
 
 $facebook: #3b5998
 $twitter: #55acee
