--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -26,11 +26,11 @@
 // CẤU TRÚC TRANG///////////////////////
 ////////////////////////////////////////
 @import pages/home
-@import pages/about
-@import pages/project
-@import pages/service
-@import pages/news
-@import pages/partner
-@import pages/gallery
-@import pages/career
-@import pages/contact
+// @import pages/about
+// @import pages/project
+// @import pages/service
+// @import pages/news
+// @import pages/partner
+// @import pages/gallery
+// @import pages/career
+// @import pages/contact
