--- a/src/templates/_layout/header.pug
+++ b/src/templates/_layout/header.pug
@@ -8,28 +8,32 @@ header
 				nav.menu
 					ul.menu-link
 						li.active
-							a(href="#!") Giới thiệu
+							a(href="#!") About Us
 						li
-							a(href="#!") Dự án
+							a(href="#!") Golf
 						li
-							a(href="#!") Tin tức
+							a(href="#!") Facilities
 						li
-							a(href="#!") Đối tác
+							a(href="#!") Tournaments
 						li
-							a(href="#!") Thư viện
+							a(href="#!") Membership
 						li
-							a(href="#!") Tuyển dụng
+							a(href="#!") News
 						li
-							a(href="#!") Liên hệ
-				.language
-					.dropdown
-						a.dropdown-toggle(href='#', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') VN
-						.dropdown-menu(aria-labelledby='dropdownMenuLink')
-							a.dropdown-item(href='#') VN
-							a.dropdown-item(href='#') EN
-				.search
-					.search-toggle <i class="fa fa-search" aria-hidden="true"></i>
-					.search-wrap
-						.searchbox
-							input(type="text" placeholder="Tìm kiếm...")
-							button.searchbutton <i class="fa fa-search" aria-hidden="true"></i>
+							a(href="#!") Gallery
+						li
+							a(href="#!") Careers
+				.logo2
+					a(href="#!")
+						img(src="img/logo2.png", alt="")
+				.header-tool
+					.online-booking
+						a.btn-book(href="#!") Online Booking
+					.tool-right
+						.social
+							a(href="#!") <i class="fa fa-facebook" aria-hidden="true"></i>
+							a(href="#!") <i class="fa fa-twitter" aria-hidden="true"></i>
+							a(href="#!") <i class="fa fa-instagram" aria-hidden="true"></i>
+						.language
+							a(href="#!") ENG
+							a(href="#!") VN
