--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,7 +1,7 @@
 extends _layout/layout
 
 block variables
-	- var title = "DF"
+	- var title = "KN Golf"
 	- var bodyclass = "homepage"
 
 block body 
