--- a/src/styles/common/_global.sass
+++ b/src/styles/common/_global.sass
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&subset=latin-ext,vietnamese')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese')
 
 body
-	font-family: 'Nunito Sans', sans-serif
+	font-family: 'Open Sans', sans-serif
 	font-size: 16px
 	line-height: 1.5
-	background: url(../img/bg.jpg) center center repeat
-	color: $white
+	color: $main
 	*
 		line-height: inherit
 html
@@ -28,7 +27,7 @@ main
 .container
 	+pos(static,unset)
 	+media-breakpoint-up(xl)
-		max-width: 1640px
+		max-width: 1280px
 		width: 100%
 		padding: 0px 30px
 	+media-breakpoint-down(lg)
@@ -43,9 +42,8 @@ main
 
 .content
 	// font-family: 'Montserrat', sans-serif
-	+fs(16rem)
+	+fs(14rem)
 	line-height: 1.6
-	color: darken($white,40%)
 	.row
 		margin: 0px -10px
 		.col-12
